#3361 - Toolbox jumps when it is grouped by category Fixes #3361

--- a/packages/survey-creator-core/src/components/toolbox/toolbox.scss
+++ b/packages/survey-creator-core/src/components/toolbox/toolbox.scss
@@ -99,3 +99,10 @@ svc-toolbox {
     padding-top: calcSize(0.5);
   }
 }
+
+.svc-toolbox__category--collapsed{
+  .svc-toolbox__tool {
+    height: 0;
+    visibility: hidden;
+  }
+}
